--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
         <meta name="description" content="何野夫的个人博客,使用Django2.0.3+Python3.6.3+Bootstrap4编写">
         <title>何野夫</title>
         <link rel="stylesheet" href="{% static 'bootstrap4/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'blog/css/nav.css' %}">
         <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'bootstrap4/js/bootstrap.min.js' %}"></script>
@@ -28,8 +29,18 @@
 
                 <!-- navbar content start -->
                 <div id="navbar" class="collapse navbar-collapse justify-content-end">
-                    <ul class="navbar-nav my-2 my-sm-0">
-                        <li class="nav-item active"><a class="nav-link" href="#">{% trans 'setting' %}</a></li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="setting" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans 'setting' %}</a>
+                            <div class="dropdown-menu" aria-labelledby="setting">
+                                <a class="dropdown-item dropdown-toggle" id="language" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">{% trans 'language' %}</a>
+                                <div class="dropdown-menu" aria-labelledby="language">
+                                    {% for language in LANGUAGES %}
+                                    <a class="dropdown-item" href="{% url 'blog:change_language' language.0 %}" next={{ request.path }}>{{ language.1 }}</a>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <!-- navbar content over -->
@@ -37,12 +48,15 @@
         </nav>
         <!-- navbar over -->
 
-        <div class="container">
-            <div class="page-header">
-                {% block header %}{% endblock header %}
+        <main role="main">
+            <div class="container">
+                <div class="page-header">
+                    {% block header %}{% endblock header %}
+                </div>
+                <div>
+                    {% block content %}{% endblock content %}
+                </div>
             </div>
-            <div>
-                {% block content %}{% endblock content %}
-            </div>
+        </main>
     </body>
 </html>
