--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,7 @@
         <meta name="description" content="何野夫的个人博客,使用Django2.0.3+Python3.6.3+Bootstrap4编写">
         <title>何野夫</title>
         <link rel="stylesheet" href="{% static 'bootstrap4/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'blog/css/nav.css' %}">
+        {% block extracss %}{% endblock extracss %}
         <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'bootstrap4/js/bootstrap.min.js' %}"></script>
