修改导航条样式适应移动端

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <!-- navbar header start -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggler" data-toggle="collapsed" data-target="#navbar" aria-expanded="false"></button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <a class="navbar-brand" href="#">{% trans 'Myblog' %}</a>
                 </div>
                 <!-- navabar header over -->
