--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,7 +23,7 @@
                 <!-- navbar header start -->
                 <div class="navbar-header">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <a class="navbar-brand" href="#">{% trans 'Myblog' %}</a>
+                    <a class="navbar-brand" href="{% url 'blog:index' %}">{% trans 'Myblog' %}</a>
                 </div>
                 <!-- navabar header over -->
 
