modify article field page make to support markdown

--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -23,9 +23,7 @@
         </div>
         <!-- article title bar over -->
         <div class="jumbotron">
-            <pre>
-                {{ article.body }}
-            </pre>
+            {{ article.body | safe }}
         </div>
     </div>
 </div>
