--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -4,6 +4,7 @@
 
 {% block extracss %}
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
+        <link rel="stylesheet" href="{% static 'css/highlight.css' %}">
 {% endblock extracss %}
 
 {% block content %}
