--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -11,19 +11,20 @@
 <div class="container">
 <div class="row">
     <!-- left start -->
-    <div class="col-md-2">
+    <div class="col-md-2 no-padding">
+        <div class="jumbotron detail-left extend-height"></div>
     </div>
     <!-- left over -->
-    <div class="col-md-10">
+    <div class="col-md-10 no-padding">
         <!-- article title bar start -->
-        <div class="jumbotron jumbotron-articles bg-light">
+        <div class="jumbotron jumbotron-nomargin bg-light">
             <h3 class="text-center">{{ article.title }}</h3>
             <dl class="list-articles">
                 <dt>{{ article.created_time }}</dt>
             </dl>
         </div>
         <!-- article title bar over -->
-        <div class="jumbotron">
+        <div class="jumbotron jumbotron-nomargin">
             {{ article.body | safe }}
         </div>
     </div>
