--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -1,3 +1,23 @@
+html,body{
+    /*box-sizing: border-box;*/
+    min-height: 100%;
+    width: 100%
+    height: 100%;
+    margin: 0;
+    padding: 0; 
+}
+body{
+    background: url("../img/bg-1.jpg") no-repeat;
+    background-size: 100% 100%;
+    margin-bottom: 35px;
+    /*height: 100%;*/
+    /*background-position: 100% 100%;*/
+    background-attachment: scroll;
+    overflow-x: hidden;
+}
+main{
+    margin-top: 4rem;
+}
 .a-text{
     color: #343a40;
 }
