--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,23 +2,25 @@
 {% load static %}
 
 <!doctype html>
-<html lang="zh-cn">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
         <meta name="keywords" content="何野夫,个人博客,Django,python,bootstrap">
         <meta name="description" content="何野夫的个人博客,使用Django2.0.3+Python3.6.3+Bootstrap4编写">
         <title>何野夫</title>
         <link rel="stylesheet" href="{% static 'bootstrap4/css/bootstrap.min.css' %}">
-        {% block extracss %}{% endblock extracss %}
         <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'bootstrap4/js/bootstrap.min.js' %}"></script>
+        {% block extracss %}{% endblock extracss %}
+       
     </head>
     <body>
         <!-- navbar start -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
             <div class="container">
                 <!-- navbar header start -->
                 <div class="navbar-header">
@@ -47,6 +49,8 @@
             </div>
         </nav>
         <!-- navbar over -->
+        </header>
+        
 
         <main role="main">
                     {% block header %}{% endblock header %}
