调整编辑文章页面按钮样式，国际化该页面

--- a/blog/templates/blog/edit_article.html
+++ b/blog/templates/blog/edit_article.html
@@ -39,7 +39,7 @@
                     <div class="row">
                         <label for="id_body" class="col-md-2 text-center">{% trans 'Content' %}</label>
                         <div class="col-md-8"></div>
-                        <button name='submit' class="col-md-1 btn btn-primary">{% trans 'Save' %}</button>
+                        <button name='submit' style="margin-bottom: 1rem;" class="col-md-1 btn btn-primary">{% trans 'Save' %}</button>
                     </div>
                     <textarea name="body" class="form-control" required id="id_body" rows="32">{{ article.body }}</textarea>
                 </div>
