--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
                 <!-- navbar content start -->
                 <div id="navbar" class="collapse navbar-collapse justify-content-end">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link" href="#" >{% trans 'Sign in' %}</a></li>
+                        <li><a class="nav-link" href="{% url 'users:login' %}" >{% trans 'Sign in' %}</a></li>
                         <li><a class="nav-link" href="#" >{% trans 'Sign up' %}</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="setting" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans 'setting' %}</a>
