--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,8 +32,13 @@
                 <!-- navbar content start -->
                 <div id="navbar" class="collapse navbar-collapse justify-content-end">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link" href="{% url 'users:login' %}" >{% trans 'Sign in' %}</a></li>
-                        <li><a class="nav-link" href="#" >{% trans 'Sign up' %}</a></li>
+                        {% if user.is_authenticated %}
+                        <li><a class="nav-link" href="#" >{{ user.username }}</a></li>
+                        <li><a class="nav-link" href="{% url 'users:logout' %}">{% trans 'Sign out' %}</a></li>
+                        {% else %}
+                        <li><a class="nav-link" href="#" >{% trans 'Sign in' %}</a></li>
+                        <li><a class="nav-link" href="{% url 'users:login' %}" >{% trans 'Sign up' %}</a></li>
+                        {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="setting" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans 'setting' %}</a>
                             <div class="dropdown-menu" aria-labelledby="setting">
