--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,3 +1,26 @@
 {% extends 'blog/base.html' %}
 {% load i18n %}
 {% load static %}
+
+
+{% block extracss %}
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock extracss %}
+
+{% block content %}
+
+<form method="post" action="{% url 'users:login' %}">
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="username" class="form-control" id="username" name="username" placeholder="Pick a username">
+    </div>
+    <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary">{% trans 'Sign up' %}</button>
+    <input type="hidden" name="next" value="{% url 'blog:index' %}" />
+</form>
+
+{% endblock content %}
