--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,7 +36,7 @@
                         <li><a class="nav-link" href="#" >{{ user.username }}</a></li>
                         <li><a class="nav-link" href="{% url 'users:logout' %}">{% trans 'Sign out' %}</a></li>
                         {% else %}
-                        <li><a class="nav-link" href="#" >{% trans 'Sign in' %}</a></li>
+                        <li><a class="nav-link" href="{% url 'users:register' %}" >{% trans 'Sign in' %}</a></li>
                         <li><a class="nav-link" href="{% url 'users:login' %}" >{% trans 'Sign up' %}</a></li>
                         {% endif %}
                         <li class="nav-item dropdown">
