--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,19 +8,24 @@
 {% endblock extracss %}
 
 {% block content %}
-
-<form method="post" action="{% url 'users:login' %}">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="username" class="form-control" id="username" name="username" placeholder="Pick a username">
+<div class="row">
+    <div class="col-md-2">
     </div>
-    <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+    <div class="col-md-8">
+        <form method="post" action="{% url 'users:login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label class="text-white" for="username">{% trans 'Username' %}</label>
+                <input type="username" class="form-control" id="username" name="username" placeholder="{% trans 'Pick a username' %}">
+            </div>
+            <div class="form-group">
+            <label class="text-white" for="password">{% trans 'Password' %}</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="{% trans 'Password' %}">
+            </div>
+            <button type="submit" class="btn btn-primary">{% trans 'Sign up' %}</button>
+            <input type="hidden" name="next" value="{% url 'blog:index' %}" />
+        </form>
     </div>
-    <button type="submit" class="btn btn-primary">{% trans 'Sign up' %}</button>
-    <input type="hidden" name="next" value="{% url 'blog:index' %}" />
-</form>
+</div>
 
 {% endblock content %}
