--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -36,7 +36,9 @@
                 <dt>{% trans 'Category' %}:<a class="a-hover" href="#">{{ article.category }}</a></dt>
                 <dt>{% trans 'CreatedTime' %}:{{ article.created_time }}</dt>
                 <dt>{% trans 'ModifiedTime' %}:{{ article.modified_time }}</dt>
+                {% if user == article.author %}
                 <dt><a class="a-hover" href="{% url 'blog:edit_article' article.id %}">{% trans 'Edit' %}</a></dt>
+                {% endif %}
             </dl>
         </div>
         <!-- article title bar over -->
