--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -13,22 +13,29 @@
     <div class="col-md-2">
     </div>
     <div class="col-md-8">
-        <form method="post" action="{% url 'users:register' %}">
+        <form class="needs-validation" method="post" action="{% url 'users:register' %}">
             {% csrf_token %}
             <div class="form-group">
                 <label class="text-white" for="id_username">{% trans 'Username' %}</label>
                 <input type="username" class="form-control" id="id_username" autofocus required name="username" placeholder="{% trans 'Pick a username' %}">
+                <div>{% trans 'Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.' %}</div>
             </div>
             <div class="form-group">
-            <label class="text-white" for="id_password1">{% trans 'Password' %}</label>
-            <input type="password" class="form-control" id="id_password1" required name="password1" placeholder="{% trans 'Password' %}">
+                <label class="text-white" for="id_password1">{% trans 'Password' %}</label>
+                <input type="password" class="form-control" id="id_password1" required name="password1" placeholder="{% trans 'Password' %}">
+                <div>{% trans "Your password can't be too similar to your other personal information." %}</div>
+                <div>{% trans "Your password must contain at least 8 characters." %}</div>
+                <div>{% trans "Your password can't be a commonly used password." %}</div>
+                <div>{% trans "Your password can't be entirely numeric." %}</div>
             </div>
             <div class="form-group">
-            <label class="text-white" for="id_password2">{% trans 'Password Confirm' %}</label>
-            <input type="password" class="form-control" id="id_password2" required name="password2" placeholder="{% trans 'Password' %}">
+                <label class="text-white" for="id_password2">{% trans 'Password Confirm' %}</label>
+                <input type="password" class="form-control" id="id_password2" required name="password2" placeholder="{% trans 'Password Confirm' %}">
+                <div>{% trans 'Enter the same password as before, for verification.' %}</div>
             </div>
             <button type="submit" class="btn btn-primary">{% trans 'Sign in' %}</button>
             <input type="hidden" name="next" value="{% url 'blog:index' %}" />
+            {{ form.error_message }}
         </form>
     </div>
 </div>
