--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,15 +14,22 @@
     <div class="col-md-8">
         <form class="needs-validation" novalidate method="post" action="{% url 'users:login' %}">
             {% csrf_token %}
-            <div class="text-warning">{{ form.non_field_errors }}</div>
+            {% if form.non_field_errors %}
+                <div class="text-warning">{{ form.non_field_errors|escape }}</div>
+            {% endif %}
             <div class="form-group">
                 <label class="text-white" for="username">{% trans 'Username' %}</label>
-                <input type="username" class="form-control" id="username" name="username" placeholder="{% trans 'Pick a username' %}">
+                <input type="username" class="form-control" id="username" name="username" autofocus required placeholder="{% trans 'Pick a username' %}">
+                {% if form.username.errors %}
+                <div class="text-warning">{{ form.username.errors|escape }}</div>
+                {% endif %}
             </div>
             <div class="form-group">
                 <label class="text-white" for="password">{% trans 'Password' %}</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="{% trans 'Password' %}">
-                <div>{{ form.password.errors }}</div>
+                <input type="password" class="form-control" id="password" name="password" required placeholder="{% trans 'Password' %}">
+                {% if form.password.errors %}
+                <div class="text-warning">{{ form.password.errors|escape }}</div>
+                {% endif %}
             </div>
             <button type="submit" class="btn btn-primary">{% trans 'Sign up' %}</button>
             <input type="hidden" name="next" value="{% url 'blog:index' %}" />
