--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -51,3 +51,8 @@ main{
 .small-padding{
     padding: 1rem;
 }
+.hover-bg-primary:hover{
+                background-color: #06D;
+                color: #fff;
+
+}
