optimize head pic

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,7 @@
                             <div class="dropdown-menu" aria-labelledby="setting">
                                 <a class="dropdown-item hover-bg-primary" href="{% url 'blog:new_article' %}">{% trans 'New Blog' %}</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item hover-bg-primary" href="{% url 'users:profile_setting' %}">{% trans 'setting' %}</a>
+                                <a class="dropdown-item hover-bg-primary" href="{% url 'users:head_pic' %}">{% trans 'setting' %}</a>
                                 <!-- 语言切换开始　-->
                                 <a class="dropdown-item dropdown-toggle hover-bg-primary" id="language" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">{% trans 'language' %}</a>
                                 <div class="dropdown-menu" aria-labelledby="language">
