--- a/users/templates/users/setting.html
+++ b/users/templates/users/setting.html
@@ -2,20 +2,120 @@
 {% load static %}
 {% load i18n %}
 
-{% block content %}
 
+
+{% block extracss %}
+<script src="{% static '/js/jquery.form.js' %}"></script>
+<style type="text/css">
+    .input-head-pic{
+        opacity: 0;
+    }
+    .head-pic-span{
+        display: block;
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        border-radius: 50%;
+        border: 3px solid #eee;
+    }
+    .head-pic-priview{
+        width: 100%;
+        height: 100%;
+    }
+    .btn-green{
+        display: block;
+        width: 100px;
+        height: 35px;
+        line-height: 35px;
+        text-align: center;
+        text-indent: 0;
+        color: #fff;
+        background-color: #717171;
+    }
+    .btn-upload{
+        display: hidden;
+        opacity: 0;
+    }
+</style>
+
+
+{% endblock extracss %}
+
+
+{% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-2 no-padding">
-            <div class="jumbotron no-margin bg-light"></div>
-        </div>
-        <div class="col-md-10 no-padding">
+<div class="row">
+    <!-- 设置左侧 start-->
+    <div class="col-3">
+    <div class="list-group" id="list-tab" role="tablist">
+        <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{% trans 'Profile' %}</a>
+        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">{% trans 'Account' %}</a>
+        <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">{% trans 'Emails' %}</a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">{% trans 'Notifacations' %}</a>
+    </div>
+    </div>
+    <!-- 设值左侧 end -->
+    <div class="col-9">
+    <div class="tab-content" id="nav-tabContent">
+        <!-- 修改头像 start -->
+        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
             <div class="jumbotron jumbotron-nomargin bg-light">
-                {% block setting %}
-                {% endblock setting %}
+                <form id="upload_head_pic"  action="{% url 'users:upload_head_pic' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <span class="head-pic-span" onclick="upload()">
+                        <img class="head-pic-priview" id="head_pic_priview" src="{{ pic }}">
+                    </span>
+                    <span>
+                        <span class="btn-green">修改头像</span>
+                        <input required class="btn-upload" id="upload_head_input" onchange="upload_head_pic()" type="file" name="head_pic">
+                    </span>
+                </form>
+                <button class="btn btn-primary" id="upload_btn" onclick="save_head_pic()">{% trans 'Save' %}</button>
             </div>
         </div>
+        <!-- 修改头像 end -->
+        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+    </div>
     </div>
 </div>
+</div>
 
+<script type="text/javascript">
+    function upload(){
+        $('#upload_head_input').click();
+    }
+
+    function upload_head_pic(){
+        $('#upload_head_pic').ajaxSubmit(function(message){
+            $('#head_pic_priview').attr('src', message + '?'  + Math.random());
+        });
+    }
+
+
+    function save_head_pic(){
+        var head_pic_path = $('#head_pic_priview').attr('src');
+        head_pic_path = head_pic_path.split('?')[0];
+        $.ajax({
+            url: '{% url "users:change_head_pic" %}',
+            type: 'POST',
+            data: {pic_path:head_pic_path, csrfmiddlewaretoken: '{{ csrf_token }}', },
+            dataType: 'json',
+            success: function(data){
+                console.log('success');
+                console.log(data);
+            },
+            error: function(data){
+                console.log("error");
+            }
+        });
+    }
+
+</script>
+
+
+
+                {% block setting %}
+                {% endblock setting %}
 {% endblock content %}
