--- a/blog/templates/blog/new_article.html
+++ b/blog/templates/blog/new_article.html
@@ -10,15 +10,33 @@
             <!-- article title bar start -->
             <form action="{% url 'blog:new_article' %}" method='post'>
                 {% csrf_token %}
-                <div class="form-group row">
-                    <label for="title" class="col-md-2 col-form-label text-center">{% trans 'Your Title' %}</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" name="title" placeholder="Your Title" required id="id_title">
+                <!-- 文章标题 start -->
+                <div class="form-group">
+                    <input type="text" class="form-control" name="title" placeholder="Your Title" required id="id_title">
+                </div>
+                <!-- end -->
+
+                <!-- 文章主体 start -->
+                <div class="form-group">
+                    <nav>
+                      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active" id="edit-article-tab" data-toggle="tab" href="#edit-article" role="tab" aria-controls="nav-edit-article" aria-selected="true">{% trans 'Edit new file' %}</a>
+                        <a class="nav-item nav-link" id="preview-aritcle-tab" data-toggle="tab" href="#preview-aritcle" role="tab" aria-controls="preview-aritcle" aria-selected="false">{% trans 'Preview' %}</a>
+                      </div>
+                    </nav>
+                    <div class="tab-content" id="nav-tabContent">
+                      <div class="tab-pane fade show active" id="edit-article" role="tabpanel" aria-labelledby="edit-article-tab">
+                            <textarea name="body" class="form-control" role='tabpanel' required aria-labelledby="home-tab" id="id_body" rows="20"></textarea>
+                      </div>
+                      <div class="tab-pane fade" id="preview-aritcle" role="tabpanel" aria-labelledby="preview-aritcle-tab"><h3>敬请期待...</h3></div>
                     </div>
                 </div>
+                <!-- end -->
+
+                <!-- 文章分类 -->
                 <div class="form-group row">
-                    <label for="id_category" class="col-md-2 col-form-label text-center">{% trans 'Category' %}</label>
-                    <div class="col-md-10">
+                    <label for="id_category" class="col-md-1 col-form-label text-center">{% trans 'Category' %} :</label>
+                    <div class="col-md-2">
                         <select name="category" class="form-control" required id="id_category">
                             {% for category in categorys %}
                                 <option value="{{ category.id }}">{{ category }}</option>
@@ -26,15 +44,21 @@
                         </select>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="row">
-                        <label for="id_body" class="col-md-2 text-center">{% trans 'Content' %}</label>
-                        <div class="col-md-8"></div>
-                        <button name='submit' style="margin-bottom: 1rem;" class="col-md-1 btn btn-primary">{% trans 'Save' %}</button>
-                        <input type="hidden" name="author"  id="id_author" value="{{ user.id }}" />
-                    </div>
-                    <textarea name="body" class="form-control" required id="id_body" rows="32"></textarea>
+                <!-- end -->
+
+                <!-- 文章标签 -->
+                <div class="form-group row">
+                    <label for="id_tags" class="col-md-1 col-form-label text-center">{% trans 'Tags' %} :</label>
+                    <small id="tagsHelpBlock" class="form-text text-muted">
+                        {% trans '最多添加5个标签' %}
+                    </small>
                 </div>
+                <!-- end -->
+
+                <button name='submit' class="col-md-1 btn btn-primary">{% trans 'Publish' %}</button>
+                <!-- 文章作者 start -->
+                <input type="hidden" name="author"  id="id_author" value="{{ user.id }}" />
+                <!-- end -->
             </form>
         </div>
     </div>
