--- a/users/templates/users/setting.html
+++ b/users/templates/users/setting.html
@@ -71,7 +71,7 @@
     <!-- 设值左侧 end -->
     <div class="col-9">
     <div class="tab-content" id="nav-tabContent">
-        <!-- 修改头像 start -->
+        
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
             <div class="jumbotron padding-samll no-margin bg-light">
                 <div class="row no-margin setting-head"><h4>{% trans 'Public profile' %}</h4></div>
@@ -105,6 +105,7 @@
                         </form>
                         <button class="btn btn-primary" id="upload_btn" onclick="save_head_pic()">{% trans 'Save' %}</button>
                     </div>
+                    <!-- 修改头像 start -->
                     <div class="col-md-4 text-center no-padding">
                         <form id="upload_head_pic"  action="{% url 'users:upload_head_pic' %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
@@ -117,6 +118,7 @@
                             </span>
                         </form>
                     </div>
+                    <!-- end -->
                 </div>
             </div>
         </div>
